# Render

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lau/render/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: cas.frag  cas.vert  color_obj.frag  obj.frag  obj.vert
app/src/main/cpp/: CMakeLists.txt  loader.cpp  native-lib.cpp
app/src/main/cpp/common/: AssetsMgr.cpp  Thread.cpp
app/src/main/cpp/common/include/: AssetsMgr.h  LogUtil.h  SystemUtil.h  Thread.h
app/src/main/cpp/common/tools/: Sync.cpp
app/src/main/cpp/common/tools/include/: Pool.h  SimpleObjPool.h  Sync.h
app/src/main/cpp/engine/: Entry.cpp
app/src/main/cpp/engine/debug/: RrtDebugEngine.cpp
app/src/main/cpp/engine/debug/include/: RrtDebugEngine.h
app/src/main/cpp/engine/gfx/: BVHNode.cpp  GfxMesh.cpp  Mesh.cpp
app/src/main/cpp/engine/gfx/egl/: GfxEglCore.cpp  GfxWindowSurface.cpp
app/src/main/cpp/engine/gfx/egl/include/: GfxEglCore.h  GfxWindowSurface.h
app/src/main/cpp/engine/gfx/include/: BVHNode.h  GfxDef.h  GfxLib.h  GfxMem.h  GfxMesh.h  Mesh.h
app/src/main/cpp/engine/gfx/mgr/: GfxHelper.cpp  GfxPicMgr.cpp  GfxShaderMgr.cpp
app/src/main/cpp/engine/gfx/mgr/include/: GfxHelper.h  GfxPicMgr.h  GfxShaderMgr.h
app/src/main/cpp/engine/gfx/rrt/: RrtBVHBuf.cpp  RrtBuffer.cpp  RrtTriBuf.cpp
app/src/main/cpp/engine/gfx/rrt/include/: RrtBVHBuf.h  RrtBuffer.h  RrtStruct.h  RrtTriBuf.h
app/src/main/cpp/engine/gfx/shader/: GfxShader.cpp  Shader.cpp
app/src/main/cpp/engine/gfx/shader/include/: GfxShader.h  Shader.h
app/src/main/cpp/engine/gfx/structure/: BVHBoundingBox.cpp  BVHNode.cpp
app/src/main/cpp/engine/gfx/structure/include/: BVHBoundingBox.h  BVHNode.h
app/src/main/cpp/engine/gre/: GreContext.cpp  GreProxy.cpp  GreRayTraceRender.cpp  GreRtxRender.cpp  GreSceneRender.cpp  GreThread.cpp  GreWindow.cpp
app/src/main/cpp/engine/gre/fw/: GreEventMgr.cpp  GreEventPool.cpp  GreObject.cpp  GreTimer.cpp  GreTimerManager.cpp  GreTimerMgr.cpp  GreWindow.cpp
app/src/main/cpp/engine/gre/fw/include/: GreContext.h  GreEventMgr.h  GreEventPool.h  GreObject.h  GreRender.h  GreTimer.h  GreTimerManager.h  GreTimerMgr.h
app/src/main/cpp/engine/gre/include/: GreContext.h  GreDef.h  GreProxy.h  GreRayTraceRender.h  GreRtxRender.h  GreSceneRender.h  GreThread.h  GreWindow.h
app/src/main/cpp/engine/gre/render/: GreBVHRender.cpp  GreRrtRender.cpp  GreSceneRender.cpp
app/src/main/cpp/engine/gre/render/include/: GreBVHRender.h  GreRrtRender.h
app/src/main/cpp/engine/nre/: NreContext.cpp  NreThread.cpp
app/src/main/cpp/engine/nre/include/: NreContext.h  NreThread.h
app/src/main/cpp/engine/view/: BVHScene.cpp  ClearLayer.cpp  ObjLayer.cpp  RayTraceScene.cpp  RrtScene.cpp  RtxScene.cpp  Scene.cpp  SightScene.cpp
app/src/main/cpp/engine/view/base/: Layer.cpp  Scene.cpp
app/src/main/cpp/engine/view/base/include/: Layer.h  LayerItem.h  Scene.h  ViewDef.h
app/src/main/cpp/engine/view/conv/: Camera.cpp  Frustum.cpp  ViewConv.cpp  Viewport.cpp
app/src/main/cpp/engine/view/conv/include/: Camera.h  Frustum.h  ViewConv.h  ViewConvLib.h  ViewLib.h  Viewport.h
app/src/main/cpp/engine/view/include/: BVHScene.h  Layer.h  ObjLayer.h  RayTraceScene.h  RrtScene.h  RtxScene.h  Scene.h  SightScene.h
app/src/main/cpp/engine/view/layers/: BVHLayer.cpp  ClearLayer.cpp  ObjLayer.cpp  RayTraceCanvasLayer.cpp  RrtCasLayer.cpp  RtxCasLayer.cpp
app/src/main/cpp/engine/view/layers/include/: BVHLayer.h  ClearLayer.h  ObjLayer.h  RayTraceCanvasLayer.h  RrtCasLayer.h  RtxCasLayer.h
app/src/main/cpp/engine/view/layers/items/: Model.cpp  ModelItem.cpp  Sphere.cpp
app/src/main/cpp/engine/view/layers/items/include/: Model.h  ModelItem.h  Sphere.h
app/src/main/cpp/engine/view/rrt/: RrtBuffer.cpp  RrtTriBuf.cpp
app/src/main/cpp/engine/view/rrt/include/: RrtBuffer.h  RrtStruct.h  RrtTriBuf.h
app/src/main/cpp/engine/view/rtx/: RtxBuffer.cpp  RtxTriBuf.cpp
app/src/main/cpp/engine/view/rtx/include/: RtxBuffer.h  RtxStruct.h  RtxTriBuf.h
app/src/main/cpp/engine/view/structure/: BoundingBox.cpp
app/src/main/cpp/engine/view/structure/include/: BoundingBox.h
app/src/main/cpp/third/include/assimp/: config.h
app/src/main/java/com/lau/render/: MainActivity.java
app/src/main/java/com/lau/render/scene/: Def.java  Scene.java
app/src/main/java/com/lau/render/ui/: BVHActivity.java  HitAABBActivity.java  HitAABBView.java  RayTraceActivity.java  ShadowActivity.java
app/src/main/java/com/lau/render/utils/: AssetsManager.java  GfxUtil.java  LogUtil.java
app/src/main/res/layout/: activity_hit_aabb.xml  activity_main.xml  activity_shadow.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/lau/render/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
